[add]headerタグ,mainタグ,footerタグの追加

--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-	<meta charset="UTF-8">
-	<title>Mrkdown記法</title>
+<meta charset="UTF-8">
+<title>Markdown記法 </title>
 </head>
-
 <body>
+<header id="pageHead">
+<h1>Markdown記法 </h1>
+</header>
+<main id="pageMain">
+</main>
+<footer id="pageFoot">
+</footer>
 </body>
 </html>
