[add]<h2>タグ,<p>タグ追加

--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-<meta charset="UTF-8">
-<title>Markdown記法 </title>
-</head>
+	<meta charset="UTF-8">
+	<title>Markdown記法 </title>
+	</head>
 <body>
-<header id="pageHead">
-<h1>Markdown記法 </h1>
-</header>
-<main id="pageMain">
-</main>
-<footer id="pageFoot">
-</footer>
+	<header id="pageHead">
+	<h1>Markdown記法 </h1>
+	</header>
+
+	<main id="pageMain">
+	<h2>見出し</h2>
+	<p>#を1~6個記述し、スペースの後、見出しをつける。#の個数がそれぞれ&lt;h1&gt;~&lt;h6&gt;に対応する。</p>
+	</main>
+	<footer id="pageFoot">
+	</footer>
 </body>
 </html>
