--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 	</head>
 <body>
 	<header id="pageHead">
-	<h1>Markdown記法 </h1>
+		<h1>Markdown記法 </h1>
 	</header>
 
 	<main id="pageMain">
-	<h2>見出し</h2>
-	<p>#を1~6個記述し、スペースの後、見出しをつける。#の個数がそれぞれ&lt;h1&gt;~&lt;h6&gt;に対応する。</p>
+		<h2>見出し</h2>
+		<p>#を1~6個記述し、スペースの後、見出しをつける。#の個数がそれぞれ&lt;h1&gt;~&lt;h6&gt;に対応する。</p>
 	</main>
 	<footer id="pageFoot">
+		<p>Copyright &copy; 2018 core-akita.ac.jp All Rights Reserved.</p>
 	</footer>
 </body>
 </html>
